--- a/Java Framework/Spring Source Code/EA/10、事务.md
+++ b/Java Framework/Spring Source Code/EA/10、事务.md
@@ -536,4 +536,209 @@
  ```
 &emsp;&emsp;this.annotationParsers 是 AnnotationTransactionAttributeSource 初始化的时候初始化的，其中的值被加入了 SpringTransactionAnnotationParser ，也即是当前进行属性获取时候其实使用 SpringTransactionAnnotationParser 类的 parseTransactionAnnotation 方法进行解析的。同时还根据环境加入了 JtaTransactionAnnotationParser 和 Ejb3TransactionAnnotationParser 的支持，分别是jdk支持的transaction注解和ejb支持的transaction注解。
 &emsp;&emsp;后面的解析，就不详细讲解了，可以分别看看几个实现 TransactionAnnotationParser 的实现类的属性解析。
-&emsp;&emsp;现在我们终于完成了事务标签的解析。到现在可能很多人已经晕了，忘记了我们最初到底是要看什么的。
+&emsp;&emsp;现在我们终于完成了事务标签的解析。到现在可能很多人已经晕了，忘记了我们最初到底是要看什么的。其实我们就是找出某个增强器是否适合对应的类，而是否匹配的关键则在于是否从指定的类或类中的方法找到对应的事务属性。
+&emsp;&emsp;至此，事务功能的初始化工作便结束了，当判断某个 bean 适用于事务增强器时，也就是适用于增强器 BeanFactoryTransactionAttributeSourceAdvisor 的类，其作为 Advisor 实现类，又因为在解析事务定义标签时我们把 TransactionInterceptor 类型的 bean 注入到了 BeanFactoryTransactionAttributeSourceAdvisor 中，所以，在调用事务增强器的代理类时会首先执行 TransactionInterceptor 进行增强，同时，也就是 TransactionInterceptor 类中的 invoke 方法中完成整个事务逻辑。
+
+## 10.3 事务增强器
+&emsp;&emsp; TransactionInterceptor 支撑着整个事务功能的架构，逻辑还是相对复杂的，现在我们就来分析此拦截器是如何实现事务特性的。 TransactionInterceptor 类继承至 MethodInterceptor ，所以调用该类是从 invoke 方法开始的，首先看下这个方法：
+ ```java
+ 	@Override
+	@Nullable
+	public Object invoke(MethodInvocation invocation) throws Throwable {
+		// Work out the target class: may be {@code null}.
+		// The TransactionAttributeSource should be passed the target class
+		// as well as the method, which may be from an interface.
+		Class<?> targetClass = (invocation.getThis() != null ? AopUtils.getTargetClass(invocation.getThis()) : null);
+
+		// Adapt to TransactionAspectSupport's invokeWithinTransaction...
+		return invokeWithinTransaction(invocation.getMethod(), targetClass, invocation::proceed);
+	}
+
+	protected Object invokeWithinTransaction(Method method, @Nullable Class<?> targetClass,
+			final InvocationCallback invocation) throws Throwable {
+
+		// If the transaction attribute is null, the method is non-transactional.
+		// 获取事务属性源
+		TransactionAttributeSource tas = getTransactionAttributeSource();
+		// 获取该事务和目标类的事务属性
+		final TransactionAttribute txAttr = (tas != null ? tas.getTransactionAttribute(method, targetClass) : null);
+		// 获取 beanFactory 中的 transactionManager
+		final TransactionManager tm = determineTransactionManager(txAttr);
+
+		if (this.reactiveAdapterRegistry != null && tm instanceof ReactiveTransactionManager) {
+			ReactiveTransactionSupport txSupport = this.transactionSupportCache.computeIfAbsent(method, key -> {
+				if (KotlinDetector.isKotlinType(method.getDeclaringClass()) && KotlinDelegate.isSuspend(method)) {
+					throw new TransactionUsageException(
+							"Unsupported annotated transaction on suspending function detected: " + method +
+							". Use TransactionalOperator.transactional extensions instead.");
+				}
+				ReactiveAdapter adapter = this.reactiveAdapterRegistry.getAdapter(method.getReturnType());
+				if (adapter == null) {
+					throw new IllegalStateException("Cannot apply reactive transaction to non-reactive return type: " +
+							method.getReturnType());
+				}
+				return new ReactiveTransactionSupport(adapter);
+			});
+			return txSupport.invokeWithinTransaction(
+					method, targetClass, invocation, txAttr, (ReactiveTransactionManager) tm);
+		}
+
+		PlatformTransactionManager ptm = asPlatformTransactionManager(tm);
+		//构造方法的唯一标示 (类.方法，如 UserServiceImpl.save)
+		final String joinpointIdentification = methodIdentification(method, targetClass, txAttr);
+
+		//声明式事务处理
+		if (txAttr == null || !(ptm instanceof CallbackPreferringPlatformTransactionManager)) {
+			// Standard transaction demarcation with getTransaction and commit/rollback calls.
+			// 创建 TransactionInfo
+			TransactionInfo txInfo = createTransactionIfNecessary(ptm, txAttr, joinpointIdentification);
+
+			Object retVal;
+			try {
+				// This is an around advice: Invoke the next interceptor in the chain.
+				// This will normally result in a target object being invoked.
+				// 执行增强方法
+				retVal = invocation.proceedWithInvocation();
+			}
+			catch (Throwable ex) {
+				// target invocation exception
+				//异常回滚
+				completeTransactionAfterThrowing(txInfo, ex);
+				throw ex;
+			}
+			finally {
+				//清除信息
+				cleanupTransactionInfo(txInfo);
+			}
+
+			if (vavrPresent && VavrDelegate.isVavrTry(retVal)) {
+				// Set rollback-only in case of Vavr failure matching our rollback rules...
+				TransactionStatus status = txInfo.getTransactionStatus();
+				if (status != null && txAttr != null) {
+					retVal = VavrDelegate.evaluateTryFailure(retVal, txAttr, status);
+				}
+			}
+
+			//提交事务
+			commitTransactionAfterReturning(txInfo);
+			return retVal;
+		}
+
+		else {
+			final ThrowableHolder throwableHolder = new ThrowableHolder();
+
+			// It's a CallbackPreferringPlatformTransactionManager: pass a TransactionCallback in.
+			// 编程式事务处理
+			try {
+				Object result = ((CallbackPreferringPlatformTransactionManager) ptm).execute(txAttr, status -> {
+					TransactionInfo txInfo = prepareTransactionInfo(ptm, txAttr, joinpointIdentification, status);
+					try {
+						Object retVal = invocation.proceedWithInvocation();
+						if (vavrPresent && VavrDelegate.isVavrTry(retVal)) {
+							// Set rollback-only in case of Vavr failure matching our rollback rules...
+							retVal = VavrDelegate.evaluateTryFailure(retVal, txAttr, status);
+						}
+						return retVal;
+					}
+					catch (Throwable ex) {
+						if (txAttr.rollbackOn(ex)) {
+							// A RuntimeException: will lead to a rollback.
+							if (ex instanceof RuntimeException) {
+								throw (RuntimeException) ex;
+							}
+							else {
+								throw new ThrowableHolderException(ex);
+							}
+						}
+						else {
+							// A normal return value: will lead to a commit.
+							throwableHolder.throwable = ex;
+							return null;
+						}
+					}
+					finally {
+						cleanupTransactionInfo(txInfo);
+					}
+				});
+
+				// Check result state: It might indicate a Throwable to rethrow.
+				if (throwableHolder.throwable != null) {
+					throw throwableHolder.throwable;
+				}
+				return result;
+			}
+			catch (ThrowableHolderException ex) {
+				throw ex.getCause();
+			}
+			catch (TransactionSystemException ex2) {
+				if (throwableHolder.throwable != null) {
+					logger.error("Application exception overridden by commit exception", throwableHolder.throwable);
+					ex2.initApplicationException(throwableHolder.throwable);
+				}
+				throw ex2;
+			}
+			catch (Throwable ex2) {
+				if (throwableHolder.throwable != null) {
+					logger.error("Application exception overridden by commit exception", throwableHolder.throwable);
+				}
+				throw ex2;
+			}
+		}
+	}
+ ```
+&emsp;&emsp;在上面的函数中，我们尝试整理下事务处理的脉络，在 Spring 中支持两种事务处理的方式，分别是声明式事务处理与编程式事务处理，两者相对于开发人员来将差别很大，但是对于 Spring 中的实现来将，大同小异。在invoke中我们可以看到这两种方式的实现。考虑到事务的应用声明式事务处理使用起来方便，也相对流行些，我们就以此种方法进行分析。对于声明式事务处理主要有以下几个步骤。
+1. 获取事务的属性。
+&emsp;&emsp;对于事务来说，最基础或者说最首要的工作便是获取事务属性了，这是支撑整个事务功能的基石，如果没有事务属性，其他功能也无从谈起，在分析事务准备阶段时我们已经分析了事务属性提取的功能，大家应该有所了解。
+1. 加载配置中的TransactionManager。
+1. 不同的事务处理方式使用不同的逻辑。
+&emsp;&emsp;对于声明式事务的处理与编程式事务的处理，低一点区别在于事务属性上，因为编程式的事务处理是不需要有事务属性的，第二点区别就是在 TransactionManager 上，CallPreferringPlatformTransactionManager 实现 PlatformTransactionManager 接口，暴露出一个方法用于执行事务处理中的回调。所以，这两种方式都可以用作事务处理方式的判断。
+1. 在目标方法执行前获取事务并手机事务信息。
+&emsp;&emsp;事务信息与事务属性并不相同，也就是 TransactionInfo 与 TransactionAttribute 并不相同， TransactionInfo 中包含了 TransactionAttribute 信息，但是，除了 TransactionAttribute 外还有其他事务信息，例如 PlatformTransactionManager 以及 TransactionStatus 相关信息。
+1. 执行目标方法。
+1. 一旦出现异常，尝试异常处理。
+&emsp;&emsp;并不是所有异常，Spring 都会将其回滚，默认只对 RuntimeException 回滚。
+1. 提交事务前的事务信息清除。
+1. 提交事务。
+
+### 10.3.1 创建事务
+ ```java
+ 	protected TransactionInfo createTransactionIfNecessary(@Nullable PlatformTransactionManager tm,
+			@Nullable TransactionAttribute txAttr, final String joinpointIdentification) {
+
+		// If no name specified, apply method identification as transaction name.
+		// 如果没有名称指定则使用方法唯一标识，并使用 DelegatingTransactionAttribute 封装 txAttr
+		if (txAttr != null && txAttr.getName() == null) {
+			txAttr = new DelegatingTransactionAttribute(txAttr) {
+				@Override
+				public String getName() {
+					return joinpointIdentification;
+				}
+			};
+		}
+
+		TransactionStatus status = null;
+		if (txAttr != null) {
+			if (tm != null) {
+				//获取 TransactionStatus
+				status = tm.getTransaction(txAttr);
+			}
+			else {
+				if (logger.isDebugEnabled()) {
+					logger.debug("Skipping transactional joinpoint [" + joinpointIdentification +
+							"] because no transaction manager has been configured");
+				}
+			}
+		}
+		//根据指定的属性与status准备一个 TransactionInfo
+		return prepareTransactionInfo(tm, txAttr, joinpointIdentification, status);
+	}
+ ```
+&emsp;&emsp;对于 createTransactionIfNecessary 函数主要做了这样几件事情。
+1. 使用 DelegatingTransactionAttribute 封装传入 的 TransactionAttribute 实例。
+&emsp;&emsp;对于传入 TransactionAtribute 类型的参数 txAttr，当前的实际类型是 RuleBasedTransactionAttribute， 是由获取事务属性时生成，主要用于数据承载，而这里之所以使用 DelegatingTransactionAttribute 进行封装，当然是提供了更多的功能。
+1. 获取事务。
+&emsp;&emsp;事务处理当然以事务为核心，那么获取事务就是最重要的事情。
+1. 构建事务信息
+&emsp;&emsp;根据之前几个步骤获取的信息构建 TransactionInfo 并返回。
+
+#### 1. 获取事务
